snowflake minima black.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic);

/* Snowflake Minima Black for TweetDeck.
Snowflake Minima is a TweetDeck CSS modification that's designed to look the most minimalistic possible.
It is based upon Snowflake Classic Black by Diamant and implements some features of pixeldesu's Modern TweetDeck modification.
You must use it with TweetDeck Dark Theme, and it is better used with Eramdam's Better TweetDeck Chrome extension.
However, if you are to use it with Better TweetDeck, you must firstly disable the "Minimal" mode as it will conflict with the theme and look not so good.
The creators of the themes used are Diamant (@diamantlefou), Berter (@BerterTheBoss) and pixeldesu (@pixeldesu or http://pixelde.su/) and was recompiled in a more fitting theme by me, Scimitar (@AlmtyCwrd)
*/

/* Scrollbar Changes */

.scroll-styled-v::-webkit-scrollbar-thumb, .scroll-styled-h::-webkit-scrollbar-thumb
{
	border-radius: 0px;
}

/* Fix colors in Accounts */
div.account-summary-text.nbfc.padding-tm.account-link {
  color: #ccc;
}
.is-inverted-dark .accordion .is-active { color: #ccc;}
  
/* Applying font */
body {
   	font-family: 'Open Sans', sans-serif;
}

.is-inverted-dark {
  	font-family: 'Open Sans', sans-serif;
}

/* Column-Update Sprite */
                
.column-header, .column-header-temp {
	border-bottom: 0px;
}

.sprite-column-update {
	width: 100%;
	height: 1px;
	border-bottom: 3px solid #ffffff;
	margin-top: -1px;
}

.column-updates {
	margin-left: 0px;
	left: 0%;
}

.column-type-icon {
	display: none;
}

.tweet-dogear {
	display: block;
}

/* Fixing RT blocks font color */

.js-mdl-header, .mdl-header
	  {
		color: #cccccc;
 	  }

#actions-modal > div > div.js-inreply.cmp-replyto.item-box.is-inverted-dark > div > header > a > div.nbfc > span
	  {
		color: #cccccc;
  	  }
#actions-modal > div > div.js-inreply.cmp-replyto.item-box.is-inverted-dark > div > div > p
	  {
		color: #cccccc;
  	  }

/* Fixing "Follow" Button color */

body > div.js-modals-container > div > div > div > div > div > div.prf-actions > div.prf-meta.cf > div > div > button > div.action-text.follow-text > span
	  {
		color: #55acee;
		display: none;
  	  }

/* Compose box colors and padding */

.js-compose-title {
  margin-left: 0px !important;
  }
.padding-bm {
  padding-right: 22px;
      }
.drawer .tweet-text {
  color: #55acee !important;
    }
.compose-remember-state, .character-count-compose:disabled, .txt-r-text-link {
      color: #55acee !important;
        }
.compose-text-title {
        color: #55acee;
          }
.compose-text
{
  background-color: #404040;
  color: #ccc;
  border-color: #404040;
}
.compose-text-container
{
  margin-right: 0px !important;
  margin-left: 0px !important;
  margin-top: 5px;
  border-color: #404040 !important;
  background-color: #404040 !important;}

.padding-al {padding: 5px !important;}

.compose-reply-tweet {
  margin-left: 0px !important;
  margin-right: 0px !important;
  margin-top: 5px;
  }
.compose-media-bar {
      border: 1px solid #404040;
      }
.compose-accounts {
        padding-left: 0px !important;
        padding-right: 0px !important;
        }
.compose-reply-tweet .tweet-body a {
  color: #55acee !important;
    }

.txt-r-white {color: #55acee;}

.compose-media-bar-holder {background-color: #404040;}
  
/* Legacy code */

.application, .app-content, .app-columns-container
	  {
		background-color: #404040;
	  }
	  .column
	  {
		background: #404040;
		border-radius: 6px;
		border: none;
	  }
	  .column-header, .column-header-temp
	  {
		background: #404040;
        background-color: #404040;
		z-index: 2;
		border-bottom-color: transparent;
	  }
	  .column-content
	  {
		top: 0px;
      }
	  .column-options
	  {
		top: 50px;
	  }
	  .scroll-conversation, .column-nav-item, .app-navigator, .app-title, .compose-reply-tweet, .compose-account, .facet-type.is-expanded, .column-options .button-tray, .compose .antiscroll-scrollbar, .account-row-separator-b:after
	  {
		background-color: transparent;
	  }
	  .stream-item, .compose-header, .facet-type, .with-column-divider-bottom
	  {
		border-bottom: none;
	  }
	  .tweet-detail-wrapper
	  {
		background: transparent;
		border-color: transparent;
	  }
	  .detail-view-inline
	  {
		border-top: none;
	  }
	  .app-header
	  {
		background-color: #404040;
	  }
	  .with-nav-border-t:before, .facet-type-thumb-size, .accordion-divider-t
	  {
		border-top: none;
	  }
	  .numbered-badge-onnav
	  {
		border: none;
	  }
	  .compose, .bg-r-light-gray
	  {
		background: linear-gradient( to right, #404040, #404040);
		color: #55acee;
	  }
	  .compose-remember-state, .character-count-compose:disabled, .txt-r-text-link 
	  {
		color: white;
	  }
	  .is-selected.compose-account, .compose-account-selected
	  {
		box-shadow: none;
	  }
	  .drawer-header
	  {
		border-bottom: none;
		z-index: 2;
		background-color: #404040;
	  }
	  .drawer-header:after 
	  {
		height: 0px;
	  }
	  .txt-r-dark-gray
	  {
		color: #55acee;
	  }
	  .drawer-content
	  {
		top: 0px;
		z-index: 1;
		padding-top: 55px;
	  }
    .drawer .tweet-text { color:white }
	  .btn-positive-on-blue[disabled], .btn-positive-on-blue[disabled]:hover, .btn-positive-on-blue[disabled]:active, .btn-positive-on-blue.is-disabled, .btn-positive-on-blue.is-disabled:hover, .btn-positive-on-blue.is-disabled:focus, .btn-positive-on-blue.is-disabled:active, .btn-on-blue[disabled], .btn-on-blue[disabled]:hover, .btn-on-blue[disabled]:active, .btn-on-blue.is-disabled, .btn-on-blue.is-disabled:hover, .btn-on-blue.is-disabled:focus, .btn-on-blue.is-disabled:active, .btn[disabled], .btn[disabled]:hover, .btn[disabled]:active, .btn.is-disabled, .btn.is-disabled:hover, .btn.is-disabled:focus, .btn.is-disabled:active
	  {
		border-color: transparent;
		background-color: transparent;
		color: transparent;
	  }
/* ... */

